--- a/Views/Usuario/HomeUsuario.cshtml
+++ b/Views/Usuario/HomeUsuario.cshtml
@@ -10,7 +10,7 @@
     <style>
         .card {
             background: white;
-            padding: 20px;
+            padding: 20px; 
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             width: 100%;
@@ -29,12 +29,26 @@
                 color: #666;
             }
 
+        #insta{
+            background: pink;
+            color:black;
+            margin: 20px;
+            text-align: center;
+
+            border-radius: 10px;
+            text-align: center;
+        }
+
 
     </style>
 </head>
 <body>
     <div class="container mt-4">
         <h1>Home User</h1>
+
+        <div class="mb-4 text-center">
+            <img id="profileImage" src="~/default.png" alt="Foto de perfil" class="rounded-circle" width="150" height="150">
+        </div>
 
         <div class="mb-4">
             <button class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#settingsModal">Configurações</button>
@@ -64,13 +78,37 @@
                                 <input type="text" class="form-control" id="phone">
                             </div>
                             <div class="mb-3">
+                                <label for="sex" class="form-label">Sexo</label>
+                                <select class="form-control" id="sex">
+                                    <option value="" selected>Escolha seu sexo</option>
+                                    <option value="masculino">Masculino</option>
+                                    <option value="feminino">Feminino</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="idade" class="form-label">Idade</label>
+                                <input type="number" class="form-control" id="idade" min="18" max="99" step="18">
+                            </div>
+                            <div class="mb-3">
+                                <label for="peso" class="form-label">Peso (Kg)</label>
+                                <input type="number" class="form-control" id="peso" min="0" step="1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="altura" class="form-label">Altura (cm)</label>
+                                <input type="number" class="form-control" id="altura" min="0" step="1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="profilePhoto" class="form-label">Foto</label>
+                                <input type="file" id="profilePhoto" accept="image/*">
+                            </div>
+                            <div class="mb-3">
                                 <label for="oldPassword" class="form-label">Senha Antiga</label>
                                 <input type="password" class="form-control" id="oldPassword">
                             </div>
                             <div class="mb-3">
                                 <label for="newPassword" class="form-label">Nova Senha</label>
                                 <input type="password" class="form-control" id="newPassword">
-                            </div>
+                            </div>                        
                         </form>
                     </div>
                     <div class="modal-footer">
@@ -103,22 +141,54 @@
             </div>
         </div>
 
+        <div id="IMC"></div>
+
         <div id="content"></div>
     </div>
 
     <script>
-        function cardNutricionista(nutricionista){
+        function cardNutricionista(nutricionista) {
             const contentDiv = document.getElementById("content");
-            console.log(nutricionista)
-            contentDiv.innerHTML = `
-                <div class="card">
-                    <h2>${nutricionista.nome}</h2>
-                    <p>${nutricionista.email}</p>
-                    <p>Iremos começar sua avaliação</p>
-                </div>
-            `;
+            contentDiv.innerHTML =
+                `<div class="card">
+                     <h2>${nutricionista.nome}</h2>
+
+                     <a href="https://instagram.com/${nutricionista.instagram}" class="btn btn-info" id="insta" target="_blank">
+                         <i class="bi bi-instagram me-2"></i>
+                         Instagram
+                     </a>
+
+                     <p>${nutricionista.email}</p>
+                     <p>Iremos começar sua avaliação</p>
+                 </div>`;
         }
 
+        function calcularIMC(peso, altura) {
+            if (!peso || !altura) {
+                return "Valores insuficientes, favor preencher os dados em 'Configurações'";
+            }
+
+            const alturaMetros = altura / 100;
+            const imc = (peso / (alturaMetros * alturaMetros)).toFixed(2);
+            console.log(imc);
+            let classificacao = "";
+
+            if (imc < 18.5) {
+                classificacao = "Abaixo do peso";
+            } else if (imc < 24.9) {
+                classificacao = "Peso normal";
+            } else if (imc < 29.9) {
+                classificacao = "Sobrepeso";
+            } else if (imc < 34.9) {
+                classificacao = "Obesidade Grau 1";
+            } else if (imc < 39.9) {
+                classificacao = "Obesidade Grau 2";
+            } else {
+                classificacao = "Obesidade Grau 3 (Mórbida)";
+            }
+
+            return `Seu IMC é ${imc} - ${classificacao}`;
+        }
         function loadContent() {
             const token = localStorage.getItem("token");
             if (!token) {
@@ -165,6 +235,18 @@
                     document.getElementById("name").value = user.nome;
                     document.getElementById("email").value = user.email;
                     document.getElementById("phone").value = user.telefone || '';
+                    document.getElementById("sex").value = user.sexo || '';
+                    document.getElementById("peso").value = user.peso || '';
+                    document.getElementById("altura").value = user.altura || '';
+                    document.getElementById("idade").value = user.idade || '';
+
+                    if (user.foto) {
+                        document.getElementById("profileImage").src = user.foto;
+                    }
+
+                    //FAZER UM CÁLCULO DO IMC E MOSTRAR
+                    const imcDiv = document.getElementById("IMC");
+                    imcDiv.innerHTML = calcularIMC(user.peso, user.altura);
                 }
             })
             .catch(error => {
@@ -229,51 +311,110 @@
 
         function saveChanges() {
             const token = localStorage.getItem("token");
+            if(document.getElementById("idade").value < 99 && document.getElementById("idade").value > 18){
+                console.log(document.getElementById("sex").value)
+                if(document.getElementById("sex").value == "masculino" || document.getElementById("sex").value == "feminino")
+                {
+                    if(document.getElementById("peso").value > 0)
+                    {
+                        if(document.getElementById("altura").value > 0)
+                        {
+                            console.log(token)
 
-            console.log(token)
+                            const userData = {
+                                Nome: document.getElementById("name").value,
+                                Telefone: document.getElementById("phone").value,
+                                Email:  document.getElementById("email").value,
+                                Sexo: document.getElementById("sex").value,
+                                Idade: document.getElementById("idade").value,
+                                Peso: document.getElementById("peso").value,
+                                Altura: document.getElementById("altura").value,
+                                SenhaAntiga: document.getElementById("oldPassword").value,
+                                NovaSenha: document.getElementById("newPassword").value.trim() === "" ? null : document.getElementById("newPassword").value
+                            };
 
-            const userData = {
-                Nome: document.getElementById("name").value,
-                Telefone: document.getElementById("phone").value,
-                Email:  document.getElementById("email").value,
-                SenhaAntiga: document.getElementById("oldPassword").value,
-                NovaSenha: document.getElementById("newPassword").value.trim() === "" ? null : document.getElementById("newPassword").value
-            };
+                            console.log(userData)
 
-            console.log(userData)
+                            fetch("/update/user/yourself", {
+                                method: "PUT",
+                                headers: {
+                                    "Authorization": `Bearer ${token}`,
+                                    "Content-Type": "application/json"
+                                },
+                                body: JSON.stringify(userData)
+                            })
+                            .then(async response => {
+                                const json = await response.json();
 
-            fetch("/update/user/yourself", {
-                method: "PUT",
-                headers: {
-                    "Authorization": `Bearer ${token}`,
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify(userData)
-            })
-            .then(async response => {
-                const json = await response.json();
+                            if (!response.ok) {
+                                let errorMessage = "Erro ao salvar";
 
-            if (!response.ok) {
-                let errorMessage = "Erro ao salvar";
+                                if (json.error) {
+                                    errorMessage = json.error;
+                                } else if (json.errors) {
+                                    const firstErrorKey = Object.keys(json.errors)[0];
+                                    if (json.errors[firstErrorKey] && json.errors[firstErrorKey].length > 0) {
+                                        errorMessage = json.errors[firstErrorKey][0];
+                                    }
+                                }
 
-                if (json.error) {
-                    errorMessage = json.error;
-                } else if (json.errors) {
-                    const firstErrorKey = Object.keys(json.errors)[0];
-                    if (json.errors[firstErrorKey] && json.errors[firstErrorKey].length > 0) {
-                        errorMessage = json.errors[firstErrorKey][0];
+                                throw new Error(errorMessage);
+                            }
+
+
+                                const fileInput = document.getElementById("profilePhoto");
+
+                                if (fileInput.files.length === 0) {
+                                    alert("Por favor, selecione uma foto para enviar.");
+                                    return;
+                                }
+
+                                const formData = new FormData();
+                                formData.append("Foto", fileInput.files[0]); // Adiciona a foto
+
+                                try {
+                                    const response = await fetch("/update/user/photo", {
+                                        method: "PUT",
+                                        headers: {
+                                            "Authorization": `Bearer ${token}`
+                                        },
+                                        body: formData
+                                    });
+
+                                    const result = await response.json();
+
+                                    if (response.ok) {
+                                        alert("Alterações salvas com sucesso! \nFaça Login novamente");
+                                        logout(); // Recarrega as informações no modal
+                                    } else {
+                                        alert(result.error || "Erro ao atualizar a foto.");
+                                    }
+                                } catch (error) {
+                                    console.error("Erro ao enviar a foto:", error);
+                                    alert("Erro ao enviar a foto.");
+                                }
+                            })
+                            .catch(error => {
+                                console.error("Erro ao salvar alterações:", error);
+                                alert("Erro ao salvar alterações.");
+                            });
+                        }else{
+                            console.error("Digite uma altura");
+                            alert("Digite uma altura");
+                        }
+                    }else{
+                        console.error("Digite um peso");
+                        alert("Digite um peso");
                     }
+                }else{
+                    console.error("Escolha um sexo");
+                    alert("Escolha um sexo");
                 }
-
-                throw new Error(errorMessage);
             }
-                alert("Alterações salvas com sucesso! \nFaça Login novamente");
-                logout(); // Recarrega as informações no modal
-            })
-            .catch(error => {
-                console.error("Erro ao salvar alterações:", error);
-                alert("Erro ao salvar alterações.");
-            });
+            else{
+                console.error("Digite uma idade entre 18 anos e 99 anos");
+                alert("Digite uma idade entre 18 anos e 99 anos");
+            }
         }
 
         function deleteAccount() {
